# ETH-Connect-PY

./: README.md  pyproject.toml
src/: Account.py  ETH-Connect.py  EllipticCurve.py  EthAccount.py  EthConnect.py  EthTransaction.py  Keyring.py  ZymbitEthKeyring.py  ZymbitKeyringInterface.py  ZymbitKeyringManager.py  test.py
src/eth-connect/: EthAccount.py
src/ethconnect/: EthAccount.py
src/test/: play.py  test.py  test_eth_account.py  test_eth_connect.py  test_zymbit_eth_keyring.py  test_zymbit_keyring_manager.py
src/zymbitwalletsdk/: BtcAccount.py  ZymbitBtcKeyring.py  __init__.py
tests/: test_eth_account.py  test_eth_connect.py  test_zymbit_eth_keyring.py  test_zymbit_keyring_manager.py
