[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ethconnect"
version = "1.0.5"
authors = [
  { name="Shivaansh Kapoor", email="shiv@zymbit.com" },
]
description = "ETH-Connect Python API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Zymbit-Wallet/ETH-Connect-PY"